--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/gallery.css">
   <title>Art Gallery</title>
 </head>
+
 <body>
   <section class="intro">
     <div class="intro-content">
       <h1 class="title">Share your Creativity</h1>
       <p class="description">
-        <span class="collage-art">Creativity is a boundless voyage into the uncharted realms of imagination, 
+        <span class="collage-art">Creativity is a boundless voyage into the uncharted realms of imagination,
           a dance with the infinite possibilities that reside within the corridors of the mind. It is the alchemy
-          that transforms the mundane into the extraordinary, the ability to breathe life into thoughts and ideas, 
-          giving them wings to soar beyond the confines of convention. In the artist's studio, the writer's desk, 
-          or the inventor's workshop, creativity is a ceaseless symphony, weaving threads of inspiration into tapestries 
-          of innovation. It is the spark that kindles the fires of innovation, a force that transcends 
-          boundaries and embraces the beauty of diversity. It is the gentle whisper that encourages us to explore, to question, and to reimagine the 
+          that transforms the mundane into the extraordinary, the ability to breathe life into thoughts and ideas,
+          giving them wings to soar beyond the confines of convention. In the artist's studio, the writer's desk,
+          or the inventor's workshop, creativity is a ceaseless symphony, weaving threads of inspiration into tapestries
+          of innovation. It is the spark that kindles the fires of innovation, a force that transcends
+          boundaries and embraces the beauty of diversity. It is the gentle whisper that encourages us to explore, to
+          question, and to reimagine the
           world in a kaleidoscope of colors and ideas.
       </p>
-      <a href="#featured" class="btn">Join</a>
+      <a href="/sell" class="btn">Join</a>
     </div>
 
     <div class="card-container">
@@ -41,11 +44,15 @@
     <h1 class="featured-title">Featured</h1>
     <div class="grid-area">
       <div class="item art-one">
-        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/a7081089-be4b-42e3-bfe9-691dbac43603" alt="A Good Boy" />
+        <img
+          src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/a7081089-be4b-42e3-bfe9-691dbac43603"
+          alt="A Good Boy" />
       </div>
 
       <div class="item art-two">
-        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/bd3d4b31-03c6-47a2-9d1c-c355cada1512" alt="City Life" />
+        <img
+          src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/bd3d4b31-03c6-47a2-9d1c-c355cada1512"
+          alt="City Life" />
       </div>
 
       <div class="item art-three">
@@ -61,15 +68,21 @@
       </div>
 
       <div class="item art-five">
-        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/8daeb10c-87c4-4b37-baa1-43559718ed05" alt="Steampunk" />
+        <img
+          src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/8daeb10c-87c4-4b37-baa1-43559718ed05"
+          alt="Steampunk" />
       </div>
 
       <div class="item art-six">
-        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/533fc7a4-e1f1-4683-9bcd-1f1386552a67" alt="Dragon in Silks" />
+        <img
+          src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/533fc7a4-e1f1-4683-9bcd-1f1386552a67"
+          alt="Dragon in Silks" />
       </div>
 
       <div class="item art-seven">
-        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/14efe3d5-940b-47d7-b9d3-c9b882ff905f" alt="Cut and Paste Face" />
+        <img
+          src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/14efe3d5-940b-47d7-b9d3-c9b882ff905f"
+          alt="Cut and Paste Face" />
       </div>
 
       <div class="item art-eight">
@@ -79,11 +92,15 @@
       </div>
 
       <div class="item art-nine">
-        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/5a118a78-ca7c-4878-995d-49ceb06c754a" alt="The Raven's Song" />
+        <img
+          src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/5a118a78-ca7c-4878-995d-49ceb06c754a"
+          alt="The Raven's Song" />
       </div>
 
       <div class="item art-ten">
-        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/bc8cdd3a-784e-43ff-9363-661ee9becab2" alt="Haunted House" />
+        <img
+          src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/bc8cdd3a-784e-43ff-9363-661ee9becab2"
+          alt="Haunted House" />
       </div>
 
       <div class="item art-eleven">
@@ -93,7 +110,9 @@
       </div>
 
       <div class="item art-twelve">
-        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/7ce32896-2c31-4e46-b6f7-7dc76916aafb" alt="Lost in Thought" />
+        <img
+          src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/7ce32896-2c31-4e46-b6f7-7dc76916aafb"
+          alt="Lost in Thought" />
       </div>
     </div>
 
@@ -116,4 +135,5 @@
   </section>
   <script src="gallery.js"></script>
 </body>
+
 </html>
