--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,11 +26,11 @@
     <%- include('./partials/navbar') %>
   </div>
   <section></section>
-  <div class="flash" style="margin-top: 100px; display: flex; justify-content: center">
+  <div class="flash" style="margin-top: 50px; display: flex; justify-content: center">
     <%- include('./partials/flash') %>
   </div>
   <div class="midPage-logo" style="display: flex; justify-content: center; align-items: center; margin-top: 18%;">
-    <h1>ArtHub</h1>
+    <h1 class="glow">ArtHarbour</h1>
   </div>
 
 
