--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,6 +14,7 @@
             </div>
             <div class="right">
                 <ul>
+                    <li><a href="/community" style="text-decoration: none;">Community</a></li>
                     <li><a href="/buy" style="text-decoration: none;">Buy</a></li>
                     <li><a href="/sell" style="text-decoration: none;">Sell</a></li>
                     <li><a href="/cart"><span><i class="fa-solid fa-cart-shopping"></i></span></a></li>
